--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -11,6 +11,10 @@ SARAH_MODEL  := @MODEL@
 		$(DIR)/two_scale_susy.mk \
 		$(DIR)/two_scale_soft.mk
 
+@CLASSNAME@_GNUPLOT := \
+		$(DIR)/@CLASSNAME@_plot_rge_running.gnuplot \
+		$(DIR)/@CLASSNAME@_plot_spectrum.gnuplot
+
 LIB@CLASSNAME@_SRC :=
 EXE@CLASSNAME@_SRC :=
 
@@ -160,7 +164,7 @@ install-src::
 		install -m u=rw,g=r,o=r $(LIB@CLASSNAME@_SRC) $(@CLASSNAME@_INSTALL_DIR)
 		install -m u=rw,g=r,o=r $(LIB@CLASSNAME@_HDR) $(@CLASSNAME@_INSTALL_DIR)
 		install -m u=rw,g=r,o=r $(EXE@CLASSNAME@_SRC) $(@CLASSNAME@_INSTALL_DIR)
-		install -m u=rw,g=r,o=r $(@CLASSNAME@_MK) $(@CLASSNAME@_INSTALL_DIR)
+		$(INSTALL_STRIPPED) $(@CLASSNAME@_MK) $(@CLASSNAME@_INSTALL_DIR) -m u=rw,g=r,o=r
 		install -m u=rw,g=r,o=r $(@CLASSNAME@_TWO_SCALE_MK) $(@CLASSNAME@_INSTALL_DIR)
 endif
 
@@ -172,12 +176,17 @@ clean-$(MODNAME)-obj:
 		-rm -f $(LIB@CLASSNAME@_OBJ)
 		-rm -f $(EXE@CLASSNAME@_OBJ)
 
+# BEGIN: NOT EXPORTED ##########################################
 clean-$(MODNAME)-src:
 		-rm -f $(LIB@CLASSNAME@_SRC)
 		-rm -f $(LIB@CLASSNAME@_HDR)
 		-rm -f $(EXE@CLASSNAME@_SRC)
 		-rm -f $(METACODE_STAMP_@CLASSNAME@)
 		-rm -f $(@CLASSNAME@_TWO_SCALE_MK)
+		-rm -f $(@CLASSNAME@_GNUPLOT)
+
+clean-$(MODNAME): clean-$(MODNAME)-src
+# END:   NOT EXPORTED ##########################################
 
 clean-$(MODNAME): clean-$(MODNAME)-dep clean-$(MODNAME)-obj
 		-rm -f $(LIB@CLASSNAME@)
