--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -184,7 +184,7 @@ int CLASSNAME::solve_ewsb_iteratively()
    double x_init[number_of_ewsb_equations];
    ewsb_initial_guess(x_init);
 
-#ifdef VERBOSE
+#ifdef ENABLE_VERBOSE
    std::cout << "Solving EWSB equations ...\n"
       "\tInitial guess: x_init =";
    for (std::size_t i = 0; i < number_of_ewsb_equations; ++i)
@@ -200,7 +200,7 @@ int CLASSNAME::solve_ewsb_iteratively()
          VERBOSE_MSG("\tSolver " << i << " finished successfully!");
          break;
       }
-#ifdef VERBOSE
+#ifdef ENABLE_VERBOSE
       else {
          WARNING("\tSolver " << i << " could not find a solution!"
                  " (requested precision: " << ewsb_iteration_precision << ")");
@@ -210,7 +210,7 @@ int CLASSNAME::solve_ewsb_iteratively()
 
    if (status != GSL_SUCCESS) {
       problems.flag_no_ewsb();
-#ifdef VERBOSE
+#ifdef ENABLE_VERBOSE
       WARNING("\tCould not find a solution to the EWSB equations!"
               " (requested precision: " << ewsb_iteration_precision << ")");
 #endif
