--- a/model_files/UMSSM/FlexibleSUSY.m.in
+++ b/model_files/UMSSM/FlexibleSUSY.m.in
@@ -95,3 +95,6 @@ InitialGuessAtLowScale = {
 };
 
 InitialGuessAtHighScale = {};
+
+UseHiggs2LoopNMSSM = True;
+EffectiveMu = \[Lambda] vS / Sqrt[2];
