add NMSSM-like two-loop Higgs contributions to the E6SSM

--- a/model_files/E6SSM/FlexibleSUSY.m.in
+++ b/model_files/E6SSM/FlexibleSUSY.m.in
@@ -106,3 +106,6 @@ InitialGuessAtLowScale = {
 };
 
 InitialGuessAtHighScale = {};
+
+UseHiggs2LoopNMSSM = True;
+EffectiveMu = \[Lambda]3 vS / Sqrt[2];
