create non-annotated tags
The release process works as follows:

 1. Create a commit where the the version number (in configure) is
    updated.  This commit should have the commit message

      version <version>

    where <version> is of the form x.y.z with x = major, y = minor, z
    = patch level.

 2. Run configure

      ./configure --disable-meta --disable-compile --with-models-=

 3. Create a non-annotated tag via

      make tag

    A tarball and a correspondin .md5 file will be created.

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -195,7 +195,7 @@ showbuild:
 	@echo "$(MODULES)"
 
 tag:
-	git tag v$(VERSION) -m "version $(VERSION)"
+	git tag v$(VERSION)
 
 release:
 	git archive --worktree-attributes --format=tar \
