--- a/config/config.h.in
+++ b/config/config.h.in
@@ -7,6 +7,7 @@
 #define FLEXIBLESUSY_MAJOR @FLEXIBLESUSY_MAJOR@
 #define FLEXIBLESUSY_MINOR @FLEXIBLESUSY_MINOR@
 #define FLEXIBLESUSY_PATCH @FLEXIBLESUSY_PATCH@
+#define FLEXIBLESUSY_EXTRA "@FLEXIBLESUSY_EXTRA@"
 
 #define SARAH_VERSION         "@SARAH_VERSION@"
 #define SARAH_MAJOR           @SARAH_MAJOR@
