--- a/config/Makefile.tower.in
+++ b/config/Makefile.tower.in
@@ -3,6 +3,10 @@ PKGNAME         := @PKGNAME@
 VERSION         := @FLEXIBLESUSY_VERSION@
 ABSBASEDIR      := @ABSBASEDIR@
 
+# Switches
+ENABLE_LOOPTOOLS := @ENABLE_LOOPTOOLS@
+ENABLE_THREADS   := @ENABLE_THREADS@
+
 LIBEXT          := @LIBEXT@
 
 MODEL1          := MSSM
@@ -13,6 +17,7 @@ MODEL2DIR       := $(ABSBASEDIR)/models/$(MODEL2)
 CONFIGDIR       := $(ABSBASEDIR)/config
 FLEXIDIR        := $(ABSBASEDIR)/src
 LEGACYDIR       := $(ABSBASEDIR)/legacy
+FFLITEDIR       := $(ABSBASEDIR)/fflite
 SLHAEADIR       := $(ABSBASEDIR)/slhaea
 
 INCMODEL1       := -I$(MODEL1DIR)
@@ -20,11 +25,13 @@ INCMODEL2       := -I$(MODEL2DIR)
 INCCONFIG       := -I$(CONFIGDIR)
 INCFLEXI        := -I$(FLEXIDIR)
 INCLEGACY       := -I$(LEGACYDIR)
+INCFFLITE       := -I$(FFLITEDIR)
 INCSLHAEA       := -I$(SLHAEADIR)
 LIBMODEL1       := $(MODEL1DIR)/lib$(MODEL1)$(LIBEXT)
 LIBMODEL2       := $(MODEL2DIR)/lib$(MODEL2)$(LIBEXT)
 LIBFLEXI        := $(FLEXIDIR)/libflexisusy$(LIBEXT)
 LIBLEGACY       := $(LEGACYDIR)/liblegacy$(LIBEXT)
+LIBFFLITE       := $(FFLITEDIR)/libfflite$(LIBEXT)
 
 # Variables for compilation
 CXX             := @CXX@
@@ -48,9 +55,14 @@ LOOPTOOLSFLAGS  := @LOOPTOOLSFLAGS@
 LOOPTOOLSLIBS   := @LOOPTOOLSLIBS@
 THREADLIBS      := @THREADLIBS@
 
-# Switches
-ENABLE_LOOPTOOLS := @ENABLE_LOOPTOOLS@
-ENABLE_THREADS   := @ENABLE_THREADS@
+ifeq ($(ENABLE_LOOPTOOLS),yes)
+LOOPFUNCFLAGS	   := $(LOOPTOOLSFLAGS)
+LOOPFUNCLIBS	   := $(LOOPTOOLSLIBS)
+endif
+ifeq ($(ENABLE_FFLITE),yes)
+LOOPFUNCFLAGS	   :=
+LOOPFUNCLIBS	    = $(LIBFFLITE)
+endif
 
 TOWER_SRC := \
 		run_tower.cpp \
@@ -90,12 +102,12 @@ distclean: clean
 
 $(TOWER_DEP) $(TOWER_OBJ): CPPFLAGS += $(GSLFLAGS) $(EIGENFLAGS) $(BOOSTFLAGS)
 
-ifeq ($(ENABLE_LOOPTOOLS),yes)
-$(TOWER_DEP) $(TOWER_OBJ): CPPFLAGS += $(LOOPTOOLSFLAGS)
+ifneq (,$(findstring yes,$(ENABLE_LOOPTOOLS)$(ENABLE_FFLITE)))
+$(TOWER_DEP) $(TOWER_OBJ): CPPFLAGS += $(LOOPFUNCFLAGS)
 endif
 
-$(TOWER_EXE): $(TOWER_OBJ) $(LIBMODEL1) $(LIBMODEL2) $(LIBFLEXI) $(LIBLEGACY)
-		$(CXX) -o $@ $(call abspathx,$^) $(GSLLIBS) $(BOOSTTHREADLIBS) $(THREADLIBS) $(LAPACKLIBS) $(FLIBS) $(LOOPTOOLSLIBS)
+$(TOWER_EXE): $(TOWER_OBJ) $(LIBMODEL1) $(LIBMODEL2) $(LIBFLEXI) $(LIBLEGACY) $(filter-out -%,$(LOOPFUNCLIBS))
+		$(CXX) -o $@ $(call abspathx,$^) $(filter -%,$(LOOPFUNCLIBS)) $(GSLLIBS) $(BOOSTTHREADLIBS) $(THREADLIBS) $(LAPACKLIBS) $(FLIBS)
 
 ifneq ($(MAKECMDGOALS),clean)
 ifneq ($(MAKECMDGOALS),clean-dep)
@@ -154,9 +166,10 @@ showbuild:
 	@echo "GSLLIBS            = $(GSLLIBS)"
 	@echo "GSLFLAGS           = $(GSLFLAGS)"
 	@echo "LAPACKLIBS         = $(LAPACKLIBS)"
-	@echo "LOOPTOOLSFLAGS     = $(LOOPTOOLSFLAGS)"
-	@echo "LOOPTOOLSLIBS      = $(LOOPTOOLSLIBS)"
+	@echo "LOOPFUNCFLAGS      = $(LOOPFUNCFLAGS)"
+	@echo "LOOPFUNCLIBS       = $(LOOPFUNCLIBS)"
 	@echo "THREADLIBS         = $(THREADLIBS)"
 	@echo ""
+	@echo "ENABLE_FFLITE      = $(ENABLE_FFLITE)"
 	@echo "ENABLE_LOOPTOOLS   = $(ENABLE_LOOPTOOLS)"
 	@echo "ENABLE_THREADS     = $(ENABLE_THREADS)"
