--- a/model_files/phdUMSSM/FlexibleSUSY.m.in
+++ b/model_files/phdUMSSM/FlexibleSUSY.m.in
@@ -8,7 +8,7 @@ MINPAR = { {1, m0},
          };
 
 EXTPAR = { {61, LambdaInput},
-           {65, vSInput},
+           {62, Sign[vS]},
            {200, Qq},
            {201, Ql},
            {202, QHd},
@@ -25,7 +25,7 @@ DefaultParameterPoint = {
     {TanBeta, 10},
     {Azero, -500},
     {LambdaInput, 0.1},
-    {vSInput, 1000},
+    {Sign[vS], 1},
     (* E6SSM inspired U(1)' charges *)
     {Qq ,  1 / Sqrt[40]},
     {Ql ,  2 / Sqrt[40]},
@@ -37,15 +37,13 @@ DefaultParameterPoint = {
     {Qs ,  5 / Sqrt[40]}
 };
 
-EWSBOutputParameters = { mHd2, mHu2, ms2 };
+EWSBOutputParameters = { mHd2, vS, ms2 };
 
 SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
-SUSYScaleInput = {
-    {vS, vSInput}
-};
+SUSYScaleInput = {};
 
 HighScale = g1 == g2;
 
@@ -63,6 +61,7 @@ HighScaleInput={
    {md2, UNITMATRIX[3] m0^2},
    {mu2, UNITMATRIX[3] m0^2},
    {me2, UNITMATRIX[3] m0^2},
+   {mHu2, m0^2},
    {\[Lambda], LambdaInput},
    {T[\[Lambda]], Azero LambdaInput},
    {MassB, m12},
@@ -87,7 +86,7 @@ InitialGuessAtLowScale = {
    {vd, SM[vev] Cos[ArcTan[TanBeta]]},
    {vu, SM[vev] Sin[ArcTan[TanBeta]]},
    {\[Lambda], LambdaInput},
-   {vS, vSInput},
+   {vS, 1000},
    {ms2, SM[MZ]^2},
    {Yu, Automatic},
    {Yd, Automatic},
@@ -98,3 +97,30 @@ InitialGuessAtHighScale = {};
 
 UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Lambda] vS / Sqrt[2];
+
+TreeLevelEWSBSolution = {
+    { mHd2,
+      (-3*g1^2*vd^3 - 5*g2^2*vd^3 - 20*gp^2*QHd^2*vd^3 -
+      20*gp^2*QHd*Qs*vd*vS^2 + 3*g1^2*vd*vu^2 + 5*g2^2*vd*vu^2 -
+      20*gp^2*QHd*QHu*vd*vu^2 - 20*vd*vS^2*\[Lambda]*conj[\[Lambda]] -
+      20*vd*vu^2*\[Lambda]*conj[\[Lambda]] + 10*Sqrt[2]*vS*vu*
+      conj[T[\[Lambda]]] + 10*Sqrt[2]*vS*vu*T[\[Lambda]])/(40*vd)
+    },
+    { vS,
+      (-10*Sqrt[2]*vd*conj[T[\[Lambda]]] - 10*Sqrt[2]*vd*T[\[Lambda]]
+      + Sign[vS]*Sqrt[-4*(-20*gp^2*QHu*Qs*vu -
+      20*vu*\[Lambda]*conj[\[Lambda]])* (-40*mHu2*vu + 3*g1^2*vd^2*vu +
+      5*g2^2*vd^2*vu - 20*gp^2*QHd*QHu*vd^2*vu - 3*g1^2*vu^3 -
+      5*g2^2*vu^3 - 20*gp^2*QHu^2*vu^3 -
+      20*vd^2*vu*\[Lambda]*conj[\[Lambda]]) +
+      (10*Sqrt[2]*vd*conj[T[\[Lambda]]] +
+      10*Sqrt[2]*vd*T[\[Lambda]])^2])/ (2*(-20*gp^2*QHu*Qs*vu -
+      20*vu*\[Lambda]*conj[\[Lambda]]))
+    },
+    { ms2,
+      (-2*gp^2*QHd*Qs*vd^2*vS - 2*gp^2*Qs^2*vS^3 -
+      2*gp^2*QHu*Qs*vS*vu^2 - 2*vd^2*vS*\[Lambda]*conj[\[Lambda]] -
+      2*vS*vu^2*\[Lambda]*conj[\[Lambda]] + Sqrt[2]*vd*vu*
+      conj[T[\[Lambda]]] + Sqrt[2]*vd*vu*T[\[Lambda]])/(4*vS)
+    }
+};
