adding dummy MSSM scan program

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -19,6 +19,7 @@ MODULES            += meta templates
 MODULES            += $(MODELS)
 # BEGIN: NOT EXPORTED ##########################################
 MODULES            += test examples
+MODULES            += higgs-study
 # END:   NOT EXPORTED ##########################################
 
 # Variables for Mathematica meta code
