--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -121,6 +121,7 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    downward_constraints.push_back(&susy_scale_constraint);
    downward_constraints.push_back(&low_scale_constraint);
 
+   model.clear();
    model.set_input(input);
    model.do_calculate_sm_pole_masses(calculate_sm_masses);
 
