clear output parameters if a serious problem has occured
A serious problem is a problem which leads to an invalid spectrum.  In
this case the output masses / mixing matrices should be set to zero to
avoid confusion on the user side.

--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -53,6 +53,7 @@ public:
    void calculate_DRbar_parameters();
    void calculate_pole_masses();
    virtual void clear();
+   void clear_DRbar_parameters();
    void do_calculate_sm_pole_masses(bool);
    bool do_calculate_sm_pole_masses() const;
    void set_ewsb_iteration_precision(double);
