Use stop 1 and 2 for the calculation of the SUSY scale

--- a/model_files/MSSMNoFV/FlexibleSUSY.m.in
+++ b/model_files/MSSMNoFV/FlexibleSUSY.m.in
@@ -3,11 +3,13 @@ FSModelName = "@CLASSNAME@";
 
 (* CMSSM input parameters *)
 
-MINPAR = { {1, m0},
-           {2, m12},
-           {3, TanBeta},
-           {4, Sign[\[Mu]]},
-           {5, Azero} };
+MINPAR = {
+    {1, m0},
+    {2, m12},
+    {3, TanBeta},
+    {4, Sign[\[Mu]]},
+    {5, Azero}
+};
 
 DefaultParameterPoint = {
     {m0, 125},
@@ -19,7 +21,7 @@ DefaultParameterPoint = {
 
 EWSBOutputParameters = { B[\[Mu]], \[Mu] };
 
-SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
+SUSYScale = Sqrt[M[St[1]]*M[St[2]]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
@@ -29,7 +31,7 @@ HighScale = g1 == g2;
 
 HighScaleFirstGuess = 2.0 10^16;
 
-HighScaleInput={
+HighScaleInput = {
    {T[Ye], Azero*Ye},
    {T[Yd], Azero*Yd},
    {T[Yu], Azero*Yu},
