--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -17,6 +17,12 @@ MODELS             := @MODELS@
 MODULES            := config src legacy slhaea doc
 ifeq ($(ENABLE_FFLITE),yes)
 MODULES	           += fflite
+else
+ifneq (,$(findstring test,$(MAKECMDGOALS)))
+ifeq ($(ENABLE_LOOPTOOLS),yes)
+MODULES	           += fflite
+endif
+endif
 endif
 # BEGIN: NOT EXPORTED ##########################################
 MODULES            += meta templates
