adding helper function to get LSP

--- a/model_files/E6SSM/FlexibleSUSY.m.in
+++ b/model_files/E6SSM/FlexibleSUSY.m.in
@@ -109,3 +109,5 @@ InitialGuessAtHighScale = {};
 
 UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Lambda]3 vS / Sqrt[2];
+
+PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
