--- a/model_files/SMSSM/FlexibleSUSY.m.in
+++ b/model_files/SMSSM/FlexibleSUSY.m.in
@@ -146,3 +146,5 @@ TreeLevelEWSBSolution = {
 
 UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Mu] + \[Lambda] vS / Sqrt[2];
+
+PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
