--- a/model_files/MSSM/FlexibleSUSY.m.in
+++ b/model_files/MSSM/FlexibleSUSY.m.in
@@ -72,3 +72,5 @@ InitialGuessAtHighScale = {
 
 UseHiggs2LoopMSSM = True;
 EffectiveMu = \[Mu];
+
+PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
