--- a/model_files/NMSSM/FlexibleSUSY.m.in
+++ b/model_files/NMSSM/FlexibleSUSY.m.in
@@ -78,3 +78,5 @@ InitialGuessAtHighScale = {};
 
 UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Lambda] vS / Sqrt[2];
+
+PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
