--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -77,6 +77,7 @@ public:
    virtual void print(std::ostream&) const;
    virtual void set_precision(double);
 
+@lspGetters@
 @massGetters@
 @mixingMatrixGetters@
 @phasesGetterSetters@
