--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-.gitignore export-ignore
+.gitignore     export-ignore
 .gitattributes export-ignore
-doc/release export-ignore
+doc/release    export-ignore
+TODO           export-ignore
