set SM particles by hand in the FS model file
SARAH currently does not recognize the flavour-decomposed SM fermions
as SM fermions via the SMQ function.

--- a/model_files/MSSMNoFV/FlexibleSUSY.m.in
+++ b/model_files/MSSMNoFV/FlexibleSUSY.m.in
@@ -74,3 +74,13 @@ InitialGuessAtHighScale = {
 
 UseHiggs2LoopMSSM = True;
 EffectiveMu = \[Mu];
+
+TopQuark    = Ft;
+BottomQuark = Fb;
+Neutrino    = Fvt;
+Electron    = Ftau;
+
+SMParticles = {
+    VectorP, VectorZ, VectorG, VectorW,
+    Fu, Fd, Fc, Fs, Ft, Fb, Fe, Fm, Ftau, Fve, Fvm, Fvt
+};
