define casimir operators for SU(3) for 1st and 2nd gen flavour states
SARAH does not define them for the first and second generations.

--- a/model_files/MSSMNoFV/FlexibleSUSY.m.in
+++ b/model_files/MSSMNoFV/FlexibleSUSY.m.in
@@ -84,3 +84,8 @@ SMParticles = {
     VectorP, VectorZ, VectorG, VectorW,
     Fu, Fd, Fc, Fs, Ft, Fb, Fe, Fm, Ftau, Fve, Fvm, Fvt
 };
+
+SA`Casimir[Ss, SARAH`color] = 4/3;
+SA`Casimir[Sc, SARAH`color] = 4/3;
+SA`Casimir[Sb, SARAH`color] = 4/3;
+SA`Casimir[St, SARAH`color] = 4/3;
