--- a/templates/two_scale_susy_parameters.cpp.in
+++ b/templates/two_scale_susy_parameters.cpp.in
@@ -54,7 +54,7 @@ namespace flexiblesusy {
 
 Eigen::ArrayXd @ModelName@_susy_parameters::beta() const
 {
-   return calc_beta().display();
+   return calc_beta().get();
 }
 
 @ModelName@_susy_parameters @ModelName@_susy_parameters::calc_beta() const
@@ -75,7 +75,7 @@ void @ModelName@_susy_parameters::clear()
 
 @anomDimFunctions@
 
-const Eigen::ArrayXd @ModelName@_susy_parameters::display() const
+const Eigen::ArrayXd @ModelName@_susy_parameters::get() const
 {
    Eigen::ArrayXd pars(numberOfParameters);
 
