--- a/model_files/MRSSM/FlexibleSUSY.m.in
+++ b/model_files/MRSSM/FlexibleSUSY.m.in
@@ -41,4 +41,4 @@ InitialGuessAtLowScale = {
 
 OnlyLowEnergyFlexibleSUSY = True;
 
-PotentialLSPParticles = { Chi, Su, Sd, Se, Cha };
+PotentialLSPParticles = { Chi, Su, Sd, Se, Cha1, Cha2 };
