--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -355,7 +355,12 @@ void CLASSNAME::calculate_DRbar_parameters()
 void CLASSNAME::calculate_pole_masses()
 {
 #ifdef ENABLE_THREADS
+   thread_exception = 0;
+
 @callAllLoopMassFunctionsInThreads@
+
+   if (thread_exception != 0)
+      std::rethrow_exception(thread_exception);
 #else
 @callAllLoopMassFunctions@
 #endif
