--- a/model_files/MSSM/FlexibleSUSY.m.in
+++ b/model_files/MSSM/FlexibleSUSY.m.in
@@ -9,12 +9,17 @@ MINPAR = { {1, m0},
            {4, Sign[\[Mu]]},
            {5, Azero} };
 
+EXTPAR = {
+           {100, tc}
+};
+
 DefaultParameterPoint = {
     {m0, 125},
     {m12, 500},
     {TanBeta, 10},
     {Sign[\[Mu]], 1},
-    {Azero, 0}
+    {Azero, 0},
+    {tc, 0}
 };
 
 EWSBOutputParameters = { B[\[Mu]], \[Mu] };
@@ -25,7 +30,7 @@ SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
 SUSYScaleInput = {};
 
-HighScale = g1 == g2;
+HighScale = g1 == g2 + tc;
 
 HighScaleFirstGuess = 2.0 10^16;
 
