--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -120,6 +120,7 @@ void @ModelName@_low_scale_constraint<Two_scale>::reset()
    scale = initial_scale_guess;
    model = NULL;
    oneset = QedQcd();
+   MZDRbar = 0.;
    new_@hyperchargeCoupling@ = 0.;
    new_@leftCoupling@ = 0.;
    new_@strongCoupling@ = 0.;
