reset beta-function base class state

--- a/templates/two_scale_susy_parameters.cpp.in
+++ b/templates/two_scale_susy_parameters.cpp.in
@@ -70,6 +70,7 @@ Eigen::ArrayXd @ModelName@_susy_parameters::beta() const
 
 void @ModelName@_susy_parameters::clear()
 {
+   reset();
 @clearParameters@
 }
 
