--- a/templates/two_scale_initial_guesser.hpp.in
+++ b/templates/two_scale_initial_guesser.hpp.in
@@ -49,6 +49,8 @@ public:
    virtual ~@ModelName@_initial_guesser();
    virtual void guess();
 
+   void set_running_precision(double p) { running_precision = p; }
+
 private:
    @ModelName@<Two_scale>* model;
    @ModelName@_input_parameters input_pars;
@@ -62,6 +64,7 @@ private:
    double me_guess;
    double mm_guess;
    double mtau_guess;
+   double running_precision;
    @ModelName@_low_scale_constraint<Two_scale> low_constraint;
    @ModelName@_susy_scale_constraint<Two_scale> susy_constraint;
    @ModelName@_high_scale_constraint<Two_scale> high_constraint;
