--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -388,6 +388,7 @@ void CLASSNAME::calculate_spectrum()
 void CLASSNAME::clear_DRbar_parameters()
 {
 @clearOutputParameters@
+@clearPhases@
 }
 
 void CLASSNAME::clear()
