--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -79,6 +79,8 @@ int main(int argc, const char* argv[])
       spectrum_generator_settings.get(Spectrum_generator_settings::pole_mass_loop_order));
    spectrum_generator.set_ewsb_loop_order(
       spectrum_generator_settings.get(Spectrum_generator_settings::ewsb_loop_order));
+   spectrum_generator.set_beta_loop_order(
+      spectrum_generator_settings.get(Spectrum_generator_settings::beta_loop_order));
 
    spectrum_generator.run(oneset, input);
 
