--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -50,6 +50,7 @@ public:
       , parameter_output_scale(0.)
       , precision_goal(1.0e-4)
       , max_iterations(0)
+      , beta_loop_order(2)
       , calculate_sm_masses(false) {}
    ~@ModelName@_spectrum_generator() {}
 
@@ -66,6 +67,7 @@ public:
    void set_precision_goal(double precision_goal_) { precision_goal = precision_goal_; }
    void set_pole_mass_loop_order(unsigned l) { model.set_pole_mass_loop_order(l); }
    void set_ewsb_loop_order(unsigned l) { model.set_ewsb_loop_order(l); }
+   void set_beta_loop_order(unsigned l) { beta_loop_order = l; }
    void set_max_iterations(unsigned n) { max_iterations = n; }
    void set_calculate_sm_masses(bool flag) { calculate_sm_masses = flag; }
 
@@ -84,6 +86,7 @@ private:
    double parameter_output_scale; ///< output scale for running parameters
    double precision_goal; ///< precision goal
    unsigned max_iterations; ///< maximum number of iterations
+   unsigned beta_loop_order; ///< beta-function loop order
    bool calculate_sm_masses; ///< calculate SM pole masses
 };
 
@@ -124,6 +127,7 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    model.clear();
    model.set_input(input);
    model.do_calculate_sm_pole_masses(calculate_sm_masses);
+   model.set_loops(beta_loop_order);
 
    @ModelName@_convergence_tester<T> convergence_tester(&model, precision_goal);
    if (max_iterations > 0)
