port setting of beta loop order and thresholds to low-scale SG

--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -45,7 +45,9 @@ public:
       , high_scale_constraint()
       , susy_scale_constraint()
       , low_scale_constraint()
-      , high_scale(0.), susy_scale(0.), low_scale(0.)
+      , high_scale(0.)
+      , susy_scale(0.)
+      , low_scale(0.)
       , input_scale(0.)
       , parameter_output_scale(0.)
       , precision_goal(1.0e-4)
