--- a/templates/low_scale_spectrum_generator.hpp.in
+++ b/templates/low_scale_spectrum_generator.hpp.in
@@ -43,10 +43,13 @@ public:
       : solver(), model()
       , susy_scale_constraint()
       , low_scale_constraint()
-      , susy_scale(0.), low_scale(0.)
+      , susy_scale(0.)
+      , low_scale(0.)
       , parameter_output_scale(0.)
       , precision_goal(1.0e-4)
       , max_iterations(0)
+      , beta_loop_order(2)
+      , threshold_corrections(1)
       , calculate_sm_masses(false) {}
    ~@ModelName@_spectrum_generator() {}
 
@@ -62,8 +65,10 @@ public:
    void set_precision_goal(double precision_goal_) { precision_goal = precision_goal_; }
    void set_pole_mass_loop_order(unsigned l) { model.set_pole_mass_loop_order(l); }
    void set_ewsb_loop_order(unsigned l) { model.set_ewsb_loop_order(l); }
+   void set_beta_loop_order(unsigned l) { beta_loop_order = l; }
    void set_max_iterations(unsigned n) { max_iterations = n; }
    void set_calculate_sm_masses(bool flag) { calculate_sm_masses = flag; }
+   void set_threshold_corrections(unsigned t) { threshold_corrections = t; }
 
    void run(const QedQcd& oneset, const @ModelName@_input_parameters& input);
    void write_running_couplings(const std::string& filename = "@ModelName@_rge_running.dat") const;
@@ -78,6 +83,8 @@ private:
    double parameter_output_scale; ///< output scale for running parameters
    double precision_goal; ///< precision goal
    unsigned max_iterations; ///< maximum number of iterations
+   unsigned beta_loop_order; ///< beta-function loop order
+   unsigned threshold_corrections; ///< disable/enable threshold corrections
    bool calculate_sm_masses; ///< calculate SM pole masses
 };
 
@@ -111,6 +118,8 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
 
    model.set_input(input);
    model.do_calculate_sm_pole_masses(calculate_sm_masses);
+   model.set_loops(beta_loop_order);
+   model.set_thresholds(threshold_corrections);
 
    @ModelName@_convergence_tester<T> convergence_tester(&model, precision_goal);
    if (max_iterations > 0)
