Bugfix: impose EWSB before calculating the spectrum
The last steps in the spectrum generator are to run to the susy scale
and calculate the pole mass spectrum.  However, the running to the
susy scale might spoil the EWSB.  Therefore, solve_ewsb() has to be
called directly after the run to the susy scale and before we
calculate the spectrum.

--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -161,6 +161,7 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
       low_scale  = low_scale_constraint.get_scale();
 
       model.run_to(susy_scale);
+      model.solve_ewsb();
       model.calculate_spectrum();
 
       // run to output scale (if scale > 0)
