--- a/tc.in
+++ b/tc.in
@@ -17,4 +17,9 @@ Block MINPAR                 # Input parameters
     5   5000.                # Azero
 Block EXTPAR
     0   0                    # unification scale (0 = automatic)
+   61   0.1                  # LambdaInput
+   62   0.1                  # KappaInput
+   63   10000                # muPrimeInput
+   64   10000                # BmuPrimeInput
+   65   10000                # vSInput
   100   0                    # tc
