config/Makefile.tower.in: add missing ENABLE_FFLITE

--- a/config/Makefile.tower.in
+++ b/config/Makefile.tower.in
@@ -4,6 +4,7 @@ VERSION         := @FLEXIBLESUSY_VERSION@
 ABSBASEDIR      := @ABSBASEDIR@
 
 # Switches
+ENABLE_FFLITE    := @ENABLE_FFLITE@
 ENABLE_LOOPTOOLS := @ENABLE_LOOPTOOLS@
 ENABLE_THREADS   := @ENABLE_THREADS@
 
