do not distribute the sm and smcw models
These models are only used for testing the effective field theory
towers.

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,5 +12,8 @@ model_files/rootMSSM            export-ignore
 model_files/SM                  export-ignore
 model_files/YukawaCMSSM         export-ignore
 
+models/sm                       export-ignore
+models/smcw                     export-ignore
+
 sarah/InertMSSM                 export-ignore
 sarah/NoYukawaMSSM              export-ignore
