--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -120,14 +120,16 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    if (!is_zero(input_scale))
       high_scale_constraint.set_scale(input_scale);
 
-   std::vector<Constraint<T>*> upward_constraints;
-   upward_constraints.push_back(&low_scale_constraint);
-   upward_constraints.push_back(&high_scale_constraint);
+   std::vector<Constraint<T>*> upward_constraints {
+      &low_scale_constraint,
+      &high_scale_constraint
+   };
 
-   std::vector<Constraint<T>*> downward_constraints;
-   downward_constraints.push_back(&high_scale_constraint);
-   downward_constraints.push_back(&susy_scale_constraint);
-   downward_constraints.push_back(&low_scale_constraint);
+   std::vector<Constraint<T>*> downward_constraints {
+      &high_scale_constraint,
+      &susy_scale_constraint,
+      &low_scale_constraint
+   };
 
    model.clear();
    model.set_input(input);
